--- a/EzOrder(Cus)/View/AD.storyboard
+++ b/EzOrder(Cus)/View/AD.storyboard
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--EzOrder-->
         <scene sceneID="B8Z-Hf-DHO">
             <objects>
                 <viewController id="iB0-1e-Vfd" customClass="ADViewController" customModule="EzOrder_Cus_" customModuleProvider="target" sceneMemberID="viewController">
@@ -18,24 +18,97 @@
                         <rect key="frame" x="0.0" y="0.0" width="414" height="736"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="AD" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="LqW-r4-Of7">
-                                <rect key="frame" x="182" y="343" width="50" height="50"/>
+                            <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g8q-XL-ilO">
+                                <rect key="frame" x="0.0" y="69" width="414" height="311.66666666666669"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleAspectFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="VVW-bt-fcR">
+                                        <rect key="frame" x="0.0" y="0.0" width="2070" height="311.66666666666669"/>
+                                        <subviews>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD1" translatesAutoresizingMaskIntoConstraints="NO" id="gDy-jO-Yk2">
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="311.66666666666669"/>
+                                            </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD2" translatesAutoresizingMaskIntoConstraints="NO" id="LLr-lI-vPs">
+                                                <rect key="frame" x="414" y="0.0" width="414.00000000000091" height="311.66666666666669"/>
+                                            </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD3" translatesAutoresizingMaskIntoConstraints="NO" id="zYl-cq-TfZ">
+                                                <rect key="frame" x="828" y="0.0" width="414" height="311.66666666666669"/>
+                                            </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD4" translatesAutoresizingMaskIntoConstraints="NO" id="Iq4-zp-gEO">
+                                                <rect key="frame" x="1242" y="0.0" width="414" height="311.66666666666669"/>
+                                            </imageView>
+                                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD5" translatesAutoresizingMaskIntoConstraints="NO" id="cVK-Fv-3i2">
+                                                <rect key="frame" x="1656" y="0.0" width="414.00000000000091" height="311.66666666666669"/>
+                                            </imageView>
+                                        </subviews>
+                                    </stackView>
+                                </subviews>
+                                <constraints>
+                                    <constraint firstItem="VVW-bt-fcR" firstAttribute="height" secondItem="g8q-XL-ilO" secondAttribute="height" id="G1P-Es-roo"/>
+                                    <constraint firstAttribute="trailing" secondItem="VVW-bt-fcR" secondAttribute="trailing" id="Mfw-iU-E92"/>
+                                    <constraint firstItem="VVW-bt-fcR" firstAttribute="top" secondItem="g8q-XL-ilO" secondAttribute="top" id="PDI-1Z-p9y"/>
+                                    <constraint firstItem="VVW-bt-fcR" firstAttribute="leading" secondItem="g8q-XL-ilO" secondAttribute="leading" id="eFD-ly-4E2"/>
+                                    <constraint firstAttribute="bottom" secondItem="VVW-bt-fcR" secondAttribute="bottom" id="hk0-OB-5aa"/>
+                                    <constraint firstItem="gDy-jO-Yk2" firstAttribute="width" secondItem="g8q-XL-ilO" secondAttribute="width" id="jeq-S0-Ffg"/>
+                                </constraints>
+                            </scrollView>
+                            <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" hidesForSinglePage="YES" numberOfPages="5" translatesAutoresizingMaskIntoConstraints="NO" id="lcX-Mh-b3t">
+                                <rect key="frame" x="171.66666666666666" y="343.66666666666669" width="71" height="37"/>
+                            </pageControl>
+                            <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7xr-uB-xw8">
+                                <rect key="frame" x="0.0" y="388" width="414" height="161"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
+                                <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                                <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dNm-od-srO">
+                                    <size key="itemSize" width="187" height="160"/>
+                                    <size key="headerReferenceSize" width="0.0" height="0.0"/>
+                                    <size key="footerReferenceSize" width="0.0" height="0.0"/>
+                                    <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
+                                </collectionViewFlowLayout>
+                                <cells>
+                                    <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="cQl-ar-BN5" customClass="UpperCollectionViewCell" customModule="EzOrder_Cus_" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.66666666666666663" width="187" height="160"/>
+                                        <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                        <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
+                                            <rect key="frame" x="0.0" y="0.0" width="187" height="160"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                        </view>
+                                    </collectionViewCell>
+                                </cells>
+                            </collectionView>
                         </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="backgroundColor" red="0.26361751189999999" green="1" blue="0.2343735388" alpha="1" colorSpace="custom" customColorSpace="displayP3"/>
+                        <constraints>
+                            <constraint firstItem="g8q-XL-ilO" firstAttribute="top" secondItem="dpd-lJ-0Wh" secondAttribute="top" constant="5" id="0NV-ju-kQA"/>
+                            <constraint firstItem="g8q-XL-ilO" firstAttribute="leading" secondItem="dpd-lJ-0Wh" secondAttribute="leading" id="BKt-mT-7xo"/>
+                            <constraint firstItem="lcX-Mh-b3t" firstAttribute="centerX" secondItem="JqD-Rs-pIA" secondAttribute="centerX" id="EUy-5j-c56"/>
+                            <constraint firstItem="g8q-XL-ilO" firstAttribute="trailing" secondItem="dpd-lJ-0Wh" secondAttribute="trailing" id="JlF-fy-VPO"/>
+                            <constraint firstItem="g8q-XL-ilO" firstAttribute="height" secondItem="dpd-lJ-0Wh" secondAttribute="height" multiplier="1/2" id="UJ4-bl-RAD"/>
+                            <constraint firstItem="lcX-Mh-b3t" firstAttribute="bottom" secondItem="g8q-XL-ilO" secondAttribute="bottom" id="yo0-UZ-8o1"/>
+                        </constraints>
                         <viewLayoutGuide key="safeArea" id="dpd-lJ-0Wh"/>
                     </view>
                     <tabBarItem key="tabBarItem" systemItem="favorites" id="9nv-Y8-nWl"/>
-                    <navigationItem key="navigationItem" id="fHE-ZA-A20"/>
+                    <navigationItem key="navigationItem" title="EzOrder" id="fHE-ZA-A20"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
+                    <connections>
+                        <outlet property="collectviewUpper" destination="7xr-uB-xw8" id="Dy2-xm-uC1"/>
+                        <outlet property="imgAd1" destination="gDy-jO-Yk2" id="scd-PB-HoX"/>
+                        <outlet property="imgAd2" destination="LLr-lI-vPs" id="SGB-O2-rrM"/>
+                        <outlet property="imgAd3" destination="zYl-cq-TfZ" id="4Ta-Ol-CPv"/>
+                        <outlet property="imgAd4" destination="Iq4-zp-gEO" id="wBz-PW-sRN"/>
+                        <outlet property="imgAd5" destination="cVK-Fv-3i2" id="zDi-E1-6Og"/>
+                        <outlet property="pgcontrolAd" destination="lcX-Mh-b3t" id="FbB-vc-ppc"/>
+                        <outlet property="scrollviewAd" destination="g8q-XL-ilO" id="gEW-1Z-mlX"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZJU-dF-qxE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <swipeGestureRecognizer direction="right" id="F46-2d-GqF">
+                    <connections>
+                        <outlet property="delegate" destination="iB0-1e-Vfd" id="60J-92-cBh"/>
+                    </connections>
+                </swipeGestureRecognizer>
             </objects>
-            <point key="canvasLocation" x="884.05797101449286" y="193.20652173913044"/>
+            <point key="canvasLocation" x="884.05797101449286" y="192.39130434782609"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="0bD-jy-mF6">
@@ -45,6 +118,7 @@
                     <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="UoG-eN-lfT">
                         <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
+                        <color key="barTintColor" red="0.98823529409999999" green="0.45098039220000002" blue="0.45098039220000002" alpha="1" colorSpace="calibratedRGB"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
@@ -56,4 +130,11 @@
             <point key="canvasLocation" x="-23.188405797101453" y="193.20652173913044"/>
         </scene>
     </scenes>
+    <resources>
+        <image name="AD1" width="3500" height="2179"/>
+        <image name="AD2" width="5279" height="3519"/>
+        <image name="AD3" width="5184" height="3456"/>
+        <image name="AD4" width="5472" height="3648"/>
+        <image name="AD5" width="4076" height="2712"/>
+    </resources>
 </document>
