--- a/EzOrder(Cus)/View/AD.storyboard
+++ b/EzOrder(Cus)/View/AD.storyboard
@@ -28,7 +28,7 @@
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="311.66666666666669"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD2" translatesAutoresizingMaskIntoConstraints="NO" id="LLr-lI-vPs">
-                                                <rect key="frame" x="414" y="0.0" width="414.00000000000091" height="311.66666666666669"/>
+                                                <rect key="frame" x="414" y="0.0" width="414" height="311.66666666666669"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD3" translatesAutoresizingMaskIntoConstraints="NO" id="zYl-cq-TfZ">
                                                 <rect key="frame" x="828" y="0.0" width="414" height="311.66666666666669"/>
@@ -37,7 +37,7 @@
                                                 <rect key="frame" x="1242" y="0.0" width="414" height="311.66666666666669"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD5" translatesAutoresizingMaskIntoConstraints="NO" id="cVK-Fv-3i2">
-                                                <rect key="frame" x="1656" y="0.0" width="414.00000000000091" height="311.66666666666669"/>
+                                                <rect key="frame" x="1656" y="0.0" width="414" height="311.66666666666669"/>
                                             </imageView>
                                         </subviews>
                                     </stackView>
@@ -59,17 +59,17 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dNm-od-srO">
-                                    <size key="itemSize" width="187" height="160"/>
+                                    <size key="itemSize" width="170" height="148"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="cQl-ar-BN5" customClass="UpperCollectionViewCell" customModule="EzOrder_Cus_" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="0.66666666666666663" width="187" height="160"/>
+                                        <rect key="frame" x="0.0" y="6.666666666666667" width="170" height="148"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="187" height="160"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="170" height="148"/>
                                             <autoresizingMask key="autoresizingMask"/>
                                         </view>
                                     </collectionViewCell>
