--- a/EzOrder(Cus)/View/AD.storyboard
+++ b/EzOrder(Cus)/View/AD.storyboard
@@ -19,25 +19,25 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" pagingEnabled="YES" translatesAutoresizingMaskIntoConstraints="NO" id="g8q-XL-ilO">
-                                <rect key="frame" x="0.0" y="69" width="414" height="311.66666666666669"/>
+                                <rect key="frame" x="0.0" y="68.999999999999972" width="414" height="415.33333333333326"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleAspectFill" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="VVW-bt-fcR">
-                                        <rect key="frame" x="0.0" y="0.0" width="2070" height="311.66666666666669"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="2070" height="415.33333333333331"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD1" translatesAutoresizingMaskIntoConstraints="NO" id="gDy-jO-Yk2">
-                                                <rect key="frame" x="0.0" y="0.0" width="414" height="311.66666666666669"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="414" height="415.33333333333331"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD2" translatesAutoresizingMaskIntoConstraints="NO" id="LLr-lI-vPs">
-                                                <rect key="frame" x="414" y="0.0" width="414" height="311.66666666666669"/>
+                                                <rect key="frame" x="414" y="0.0" width="414.00000000000091" height="415.33333333333331"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD3" translatesAutoresizingMaskIntoConstraints="NO" id="zYl-cq-TfZ">
-                                                <rect key="frame" x="828" y="0.0" width="414" height="311.66666666666669"/>
+                                                <rect key="frame" x="828" y="0.0" width="414" height="415.33333333333331"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD4" translatesAutoresizingMaskIntoConstraints="NO" id="Iq4-zp-gEO">
-                                                <rect key="frame" x="1242" y="0.0" width="414" height="311.66666666666669"/>
+                                                <rect key="frame" x="1242" y="0.0" width="414" height="415.33333333333331"/>
                                             </imageView>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="AD5" translatesAutoresizingMaskIntoConstraints="NO" id="cVK-Fv-3i2">
-                                                <rect key="frame" x="1656" y="0.0" width="414" height="311.66666666666669"/>
+                                                <rect key="frame" x="1656" y="0.0" width="414.00000000000091" height="415.33333333333331"/>
                                             </imageView>
                                         </subviews>
                                     </stackView>
@@ -52,25 +52,31 @@
                                 </constraints>
                             </scrollView>
                             <pageControl opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" hidesForSinglePage="YES" numberOfPages="5" translatesAutoresizingMaskIntoConstraints="NO" id="lcX-Mh-b3t">
-                                <rect key="frame" x="171.66666666666666" y="343.66666666666669" width="71" height="37"/>
+                                <rect key="frame" x="171.66666666666666" y="447.33333333333331" width="71" height="37"/>
                             </pageControl>
                             <collectionView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" fixedFrame="YES" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" dataMode="prototypes" translatesAutoresizingMaskIntoConstraints="NO" id="7xr-uB-xw8">
-                                <rect key="frame" x="0.0" y="388" width="414" height="161"/>
+                                <rect key="frame" x="0.0" y="527" width="414" height="160"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                 <collectionViewFlowLayout key="collectionViewLayout" scrollDirection="horizontal" minimumLineSpacing="10" minimumInteritemSpacing="10" id="dNm-od-srO">
-                                    <size key="itemSize" width="302" height="113"/>
+                                    <size key="itemSize" width="282" height="113"/>
                                     <size key="headerReferenceSize" width="0.0" height="0.0"/>
                                     <size key="footerReferenceSize" width="0.0" height="0.0"/>
                                     <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                                 </collectionViewFlowLayout>
                                 <cells>
                                     <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="cQl-ar-BN5" customClass="UpperCollectionViewCell" customModule="EzOrder_Cus_" customModuleProvider="target">
-                                        <rect key="frame" x="0.0" y="24" width="302" height="113"/>
+                                        <rect key="frame" x="0.0" y="23.666666666666668" width="282" height="113"/>
                                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO">
-                                            <rect key="frame" x="0.0" y="0.0" width="302" height="113"/>
+                                            <rect key="frame" x="0.0" y="0.0" width="282" height="113"/>
                                             <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="Ddg-cT-aeJ">
+                                                    <rect key="frame" x="0.0" y="-16" width="172" height="129"/>
+                                                    <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                                </imageView>
+                                            </subviews>
                                         </view>
                                     </collectionViewCell>
                                 </cells>
@@ -82,7 +88,7 @@
                             <constraint firstItem="g8q-XL-ilO" firstAttribute="leading" secondItem="dpd-lJ-0Wh" secondAttribute="leading" id="BKt-mT-7xo"/>
                             <constraint firstItem="lcX-Mh-b3t" firstAttribute="centerX" secondItem="JqD-Rs-pIA" secondAttribute="centerX" id="EUy-5j-c56"/>
                             <constraint firstItem="g8q-XL-ilO" firstAttribute="trailing" secondItem="dpd-lJ-0Wh" secondAttribute="trailing" id="JlF-fy-VPO"/>
-                            <constraint firstItem="g8q-XL-ilO" firstAttribute="height" secondItem="dpd-lJ-0Wh" secondAttribute="height" multiplier="1/2" id="UJ4-bl-RAD"/>
+                            <constraint firstItem="g8q-XL-ilO" firstAttribute="height" secondItem="dpd-lJ-0Wh" secondAttribute="height" multiplier="2/3" id="UJ4-bl-RAD"/>
                             <constraint firstItem="lcX-Mh-b3t" firstAttribute="bottom" secondItem="g8q-XL-ilO" secondAttribute="bottom" id="yo0-UZ-8o1"/>
                         </constraints>
                         <viewLayoutGuide key="safeArea" id="dpd-lJ-0Wh"/>
@@ -91,7 +97,7 @@
                     <navigationItem key="navigationItem" title="EzOrder" id="fHE-ZA-A20"/>
                     <simulatedTabBarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
-                        <outlet property="collectviewUpper" destination="7xr-uB-xw8" id="Dy2-xm-uC1"/>
+                        <outlet property="collectviewRank" destination="7xr-uB-xw8" id="x2t-y6-ssj"/>
                         <outlet property="imgAd1" destination="gDy-jO-Yk2" id="scd-PB-HoX"/>
                         <outlet property="imgAd2" destination="LLr-lI-vPs" id="SGB-O2-rrM"/>
                         <outlet property="imgAd3" destination="zYl-cq-TfZ" id="4Ta-Ol-CPv"/>
