--- a/EzOrder(Cus)/View/Personal.storyboard
+++ b/EzOrder(Cus)/View/Personal.storyboard
@@ -271,7 +271,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="pdV-R5-F2f" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1663.7681159420292" y="468.75000000000006"/>
+            <point key="canvasLocation" x="884" y="962"/>
         </scene>
         <!--Date Event Table View Controller-->
         <scene sceneID="ihh-4g-8Ao">
@@ -339,7 +339,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="0fE-sh-19w" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="2338.4000000000001" y="470.91454272863569"/>
+            <point key="canvasLocation" x="1559" y="965"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="cRo-e8-5Xv">
